# colt-robot-ws

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_SOURCES.md
scripts/: install_runtime.sh  package_project.sh  run_project.sh  sync_robot_ws.sh
src/: README.md
src/colt/: DEVELOPMENT_FLOW.md  DOCUMENT_REVIEW.md  README.md
src/colt/colt_bridle/: CMakeLists.txt  README.md  package.xml
src/colt/colt_bridle/docs/: 01_package_architecture.md  02_technical_route.md  03_runtime_inputs_outputs.md  04_model_training_boundary.md  05_field_test_constraints.md
src/colt/colt_bridle/launch/: bridle_demo.launch  capture_session.launch  fake_scene.launch  field_capture_session.launch  field_hardware.launch  online_perception.launch  pt_control.launch  role_fusion_demo.launch  runtime_package_loader.launch
src/colt/colt_bridle/models/runtime/: README.md
src/colt/colt_bridle/rviz/: bridle_debug.rviz
src/colt/colt_bridle/scripts/: bridle_common.py  bridle_detection.py  check_online_perception.py  colt_capture_session.py  detector_node.py  detector_pipeline.py  fake_candidate_publisher.py  fake_scene_publisher.py  object_registry.py  pt_control_node.py  pt_view_planner_node.py  runtime_package_loader.py  rviz_visualizer_node.py  scene_fusion_node.py
src/colt/colt_msgs/: CMakeLists.txt  README.md  package.xml
src/colt/colt_msgs/docs/: 01_message_design.md  02_rviz_display_contract.md
src/colt/colt_msgs/msg/: Box2D.msg  Box3D.msg  Detection3D.msg  Detection3DArray.msg  PerceptionState.msg  Seat.msg
src/colt/colt_trainer/: README.md
src/colt/colt_trainer/config/: dataset_template.yaml  export_runtime_template.yaml  train_yolo_seg_template.yaml
src/colt/colt_trainer/docs/: 01_role_and_boundaries.md  02_dataset_design.md  03_annotation_workflow.md  04_training_pipeline.md  05_export_and_release.md  06_evaluation_acceptance.md  07_depth_geometry_validation.md  08_open_questions.md  09_robot_independent_capture.md
src/colt/colt_ui/: CMakeLists.txt  README.md  package.xml
src/colt/colt_ui/launch/: terminal_selector.launch
src/colt/colt_ui/scripts/: rviz_marker_publisher.py  terminal_chair_selector.py
src/fdilink_ahrs/: README.md
src/fdilink_ahrs/launch/: ahrs_driver.launch  fdi.launch
src/fdilink_ahrs/scripts/: fdilink_udev.sh
src/ublox/ublox_gps/src/: gps.cpp
src/wpm2_bringup/launch/: display.launch
src/wpv4_behaviors/: CMakeLists.txt
src/wpv4_behaviors/src/: wpv4_objects_3d.cpp  wpv4_pt_grab.cpp
src/wpv4_bringup/config/: m8n.yaml  settings.yaml  wpv4_pt.yaml  wpv4_zeros.yaml
src/wpv4_bringup/include/: MPU_driver.h  WPV4_driver.h
src/wpv4_bringup/launch/: base_imu.launch  base_imu_pt.launch  display.launch  imu_odom.launch  imu_test.launch  js_imu.launch  kinect_pt.launch  trackbars_mani.launch  wpv4_m2_sick.launch  wpv4_wpm2.launch  wpv4_wpm2_pt.launch
src/wpv4_bringup/rviz/: imu_tf.rviz
src/wpv4_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  install_for_noetic.sh  wpv4.rules
src/wpv4_bringup/src/: imu_odometry_wpv4.cpp  wpv4_core.cpp  wpv4_imu.cpp  wpv4_js_velcmd.cpp
src/wpv4_bringup/src/driver/: MPU_driver.cpp  WPV4_driver.cpp
src/wpv4_bringup/urdf/: wpv4.urdf  wpv4_lms111.urdf  wpv4_lms111_detail.urdf  wpv4_m2_lms151.urdf  wpv4_mecanum.urdf  wpv4_mecanum_wpm2.urdf  wpv4_track.urdf  wpv4_track_wpm1.urdf  wpv4_track_wpm2.urdf  wpv4_wpm1.urdf  wpv4_wpm2.urdf  wpv4_wpm2_pt.urdf
src/wpv4_tutorials/: CMakeLists.txt  package.xml
src/wpv4_tutorials/cfg/: pt.cfg
src/wpv4_tutorials/launch/: demo_mag_yaw.launch  gmapping_lms111.launch  gmapping_lms511.launch  js_rqt.launch  mani_ctrl.launch  nav_lms111.launch  nav_lms511.launch  pt_ctrl.launch  pt_grab.launch  pt_object_detect.launch  rqt_core.launch
src/wpv4_tutorials/src/: wpv4_gps_data.cpp  wpv4_imu_demo.cpp  wpv4_imu_rpy.cpp  wpv4_mag_yaw.cpp  wpv4_mani_init.cpp  wpv4_pt_ctrl.cpp
src/wpv4_velodyne/launch/: 3d_slam.launch  gmapping.launch  mobile_manipulation.launch  navigation.launch  velodyne_scan.launch
