<?xml version="1.0"?>
<package format="2">
  <name>colt_msgs</name>
  <version>0.1.0</version>
  <description>Stable message interfaces for Colt perception, geometry, and RViz debug output.</description>

  <maintainer email="120808246+Aix707@users.noreply.github.com">Aix707</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
